<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegistActivity">

    <EditText
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:id="@+id/regist_name"
        android:layout_width="match_parent"
        android:hint="@string/use"
        android:layout_height="wrap_content" />
    <EditText
        android:hint="@string/pass"
        app:layout_constraintTop_toBottomOf="@id/regist_name"
        android:layout_margin="20dp"
        android:id="@+id/regist_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:hint="@string/surepass"
        app:layout_constraintTop_toBottomOf="@id/regist_pass"
        android:layout_margin="20dp"
        android:id="@+id/regist_sure_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/regist"
        app:layout_constraintTop_toBottomOf="@id/regist_sure_pass"
        android:layout_marginTop="50dp"
        android:layout_margin="20dp"
        android:textSize="18sp"
        android:text="注册"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>