<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchActivity">

    <EditText
        android:inputType="text"
        android:imeOptions="actionSearch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_cancel"
        android:layout_marginLeft="20dp"
        android:id="@+id/et"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="6dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="6dp"
        android:id="@+id/tv_cancel"
        android:text="@string/cancel"
        app:layout_constraintLeft_toRightOf="@id/et"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_record"
        app:layout_constraintTop_toBottomOf="@id/et"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/tv_history_title"
            android:text="@string/history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <ImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/ic_clear"
            android:id="@+id/iv_delete"
            android:layout_width="30dp"
            android:layout_height="30dp"/>
        
        <com.example.collect.widget.FlowLayout
            android:padding="5dp"
            android:id="@+id/fl_history"
            app:layout_constraintTop_toBottomOf="@id/tv_history_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/fl_history"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/tv_hot_title"
            android:text="@string/hot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <com.example.collect.widget.FlowLayout
            android:padding="5dp"
            android:id="@+id/fl_hot"
            app:layout_constraintTop_toBottomOf="@id/tv_hot_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:id="@+id/cl_result"
        app:layout_constraintTop_toBottomOf="@id/et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rlv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>